# mytimesheet-python-public

./: .gitignore  README.md  mytimesheet.ado  mytimesheet.pkg  mytimesheet.sthlp  pyproject.toml  stata.toc  timesheet_generator.py
mytimesheet/: __init__.py  __main__.py  cli.py  generator.py  paths.py  periods.py  scanner.py
